<resources>
    <string name="app_name">Popular Movies App</string>

    <!--    TODO: delete these later-->
    <string name="genres">Genres:</string>
    <string name="release_date">Release Date:</string>
    <string name="popularity">Vote Average:</string>
    <string name="overview">Overview:</string>
    <string name="result">Review:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
