<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_poster_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/genres"
            android:layout_toRightOf="@+id/iv_poster_movie"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            style ="@style/TextStyleTitle"
            android:textSize="16sp"
            android:text="@string/genres"
            />

        <TextView
            android:id="@+id/tv_genres_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style ="@style/TextStyleItems"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:layout_below="@+id/genres"
            android:layout_toEndOf="@+id/iv_poster_movie"
            />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:text="@string/release_date"
            style ="@style/TextStyleTitle"
            android:layout_below="@+id/tv_genres_movie"
            android:layout_toEndOf="@+id/iv_poster_movie"
            />

        <TextView
            android:id="@+id/tv_release_date_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style ="@style/TextStyleItems"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:layout_below="@+id/release_date"
            android:layout_toEndOf="@+id/iv_poster_movie"
            />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:text="@string/popularity"
            style ="@style/TextStyleTitle"
            android:layout_below="@+id/tv_release_date_movie"
            android:layout_toEndOf="@+id/iv_poster_movie"
            />

        <TextView
            android:id="@+id/tv_vote_average_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/popularity"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            style ="@style/TextStyleItems"
            android:layout_toEndOf="@+id/iv_poster_movie"
            />


        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            style ="@style/TextStyleTitle"
            android:text="@string/overview"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/iv_poster_movie"
            android:textSize="18sp"
            />

        <!--<view-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/overview"/>-->

        <TextView
            android:id="@+id/tv_overview_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style ="@style/TextStyleItems"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/overview"
            android:textSize="17sp"
            />

        <TextView
            android:id="@+id/trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            style ="@style/TextStyleTitle"
            android:text="Trailers:"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/tv_overview_movie"
            android:textSize="18sp"
            />

        <HorizontalScrollView
            android:id="@+id/scrollViewTrailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_below="@+id/trailers"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="horizontal">
                <LinearLayout
                    android:id="@+id/layout_trailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/reviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            style ="@style/TextStyleTitle"
            android:text="@string/result"
            android:layout_below="@+id/scrollViewTrailers"
            android:textSize="18dp"
        />

        <LinearLayout
            android:id="@+id/layout_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_below="@+id/reviewTitle"
            android:orientation="vertical"
        />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>